--- a/ios/Gigster.xcodeproj/xcshareddata/xcschemes/Gigster.xcscheme
+++ b/ios/Gigster.xcodeproj/xcshareddata/xcschemes/Gigster.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "boltexponativewind.app"
-               BlueprintName = "boltexponativewind"
-               ReferencedContainer = "container:boltexponativewind.xcodeproj">
+               BuildableName = "Gigster.app"
+               BlueprintName = "Gigster"
+               ReferencedContainer = "container:Gigster.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "boltexponativewindTests.xctest"
-               BlueprintName = "boltexponativewindTests"
-               ReferencedContainer = "container:boltexponativewind.xcodeproj">
+               BuildableName = "GigsterTests.xctest"
+               BlueprintName = "GigsterTests"
+               ReferencedContainer = "container:Gigster.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "boltexponativewind.app"
-            BlueprintName = "boltexponativewind"
-            ReferencedContainer = "container:boltexponativewind.xcodeproj">
+            BuildableName = "Gigster.app"
+            BlueprintName = "Gigster"
+            ReferencedContainer = "container:Gigster.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "boltexponativewind.app"
-            BlueprintName = "boltexponativewind"
-            ReferencedContainer = "container:boltexponativewind.xcodeproj">
+            BuildableName = "Gigster.app"
+            BlueprintName = "Gigster"
+            ReferencedContainer = "container:Gigster.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
