Update splash screen assets and configuration
- Replaced splash screen image in app.json and updated resize mode to 'cover'.
- Added new splash screen image asset and updated storyboard to include the new image.
- Defined a new color for the splash screen background in the asset catalog.

--- a/app.json
+++ b/app.json
@@ -6,9 +6,8 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
-      "image": "./assets/images/icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#8B5CF6"
+      "image": "./assets/images/splashScreen.png",
+      "resizeMode": "cover"
     },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
