--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/icon.png",
     "splash": {
       "image": "./assets/images/splashScreen.png",
-      "resizeMode": "cover"
+      "resizeMode": "contain"
     },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
