Enhance user profile creation and update app configuration
- Updated splash screen settings in app.json, changing resize mode to 'cover' and adding a background color.
- Refactored user registration logic in AuthContext to utilize a database trigger for profile creation, removing redundant insertions.
- Added a new SQL migration to handle automatic profile creation for new users in the database.

--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "icon": "./assets/images/icon.png",
     "splash": {
       "image": "./assets/images/splashScreen.png",
-      "resizeMode": "contain"
+      "resizeMode": "cover",
+      "backgroundColor": "#6D28D9"
     },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
