Update splash screen resize mode and reorganize project file references
- Changed splash screen resize mode from 'cover' to 'contain' in app.json for better visual presentation.
- Updated project file references in Xcode project to improve organization and clarity.

--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/images/icon.png",
     "splash": {
       "image": "./assets/images/splashScreen.png",
-      "resizeMode": "cover",
+      "resizeMode": "contain",
       "backgroundColor": "#6D28D9"
     },
     "scheme": "myapp",
