--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "splash": {
       "image": "./assets/images/splashScreen.png",
       "resizeMode": "contain",
-      "backgroundColor": "#6D28D9"
+      "backgroundColor": "#FFFFFF"
     },
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
